correctly aligning video

--- a/static/styles.css
+++ b/static/styles.css
@@ -7,7 +7,8 @@ button {
 }
 
 #title {
-    position: absolute;
+    top: 50%;
+    padding-top: 150px;
     padding-left: 50px;
     padding-right: 50px;
     text-align: left;
@@ -50,7 +51,6 @@ label {
 
 video {
     width: 100%;
-    z-index: 0;
     border-radius: 20px;
 }
 
@@ -62,3 +62,7 @@ footer {
     padding: 40px;
 }
 
+div {
+    outline: black dotted;
+    outline-width: 2px;
+}
